# rust-test-rest

./: .gitignore  .project  Cargo.toml  README.md  build.rs  install-deps.sh  send-test1.sh  send-test2.sh  send-test3.sh
previews-generator/: Makefile  previews-generator.cpp
src/: handlers.rs  main.rs
test-images/: test1-base64.txt
