[package]
name = "rust-test-rest"
version = "0.1.0"
authors = ["Vadim Melnikov <muller230395@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1"
serde = "1.0.112"
futures = "0.3.5"
serde_qs = "0.6"
serde_derive = "1.0.112"
actix-multipart = "0.2.0"
base64 = "0.12.2"
rust-crypto = "^0.2"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"